--- a/ansible/roles/bootloader/templates/arch.conf.j2
+++ b/ansible/roles/bootloader/templates/arch.conf.j2
@@ -2,4 +2,4 @@ title          Arch Linux
 linux          /vmlinuz-linux
 initrd         /intel-ucode.img
 initrd         /initramfs-linux.img
-options        cryptdevice=UUID={{root_uuid}}:cryptlvm root=/dev/{{lvm.vg_main}}/root resume=/dev/{{lvm.vg_main}}/swap rw
+options        cryptdevice=UUID={{root_uuid}}:cryptlvm root=/dev/{{lvm.vg_main}}/{{lvm.lv_root}} resume=/dev/{{lvm.vg_main}}/{{lvm.lv_swap}} rw
