--- a/ansible/roles/systemd-boot/templates/arch.conf.j2
+++ b/ansible/roles/systemd-boot/templates/arch.conf.j2
@@ -2,4 +2,4 @@ title          Arch Linux
 linux          /vmlinuz-linux
 initrd         /intel-ucode.img
 initrd         /initramfs-linux.img
-options        cryptdevice=UUID={{root_uuid}}:cryptlvm root=/dev/{{lvm.vg_main}}/{{lvm.lv_root}} resume=/dev/{{lvm.vg_main}}/{{lvm.lv_swap}} rw
+options        cryptdevice=UUID={{ luks_device_uuid }}:cryptlvm root={{ lvm.lv_root.dev }} resume={{ lvm.lv_swap.dev }} rw
