--- a/ansible/roles/sway/files/waybar/style.css
+++ b/ansible/roles/sway/files/waybar/style.css
@@ -12,38 +12,46 @@
 @define-color nord11 #bf616a;
 
 * {
-    border: none;
-    border-radius: 0;
-    font-family: sans-serif;
-    font-size: 16px;
-    min-height: 0;
+  border: none;
+  border-radius: 0;
+  font-family: sans-serif;
+  font-size: 16px;
+  min-height: 0;
 }
 
 window#waybar {
-    background: @nord0;
-    color: @nord6;
+  background: @nord0;
+  color: @nord6;
 }
 
 #workspaces button {
-    padding: 0.4em 1em;
-    background: transparent;
-    color: @nord6;
-    border-top: 2px solid transparent;
+  padding: 0.4em 1em;
+  background: transparent;
+  color: @nord6;
+  border-top: 2px solid transparent;
 }
 
 #workspaces button.focused {
-    color: @nord8;
-    border-top: 2px solid @nord8;
+  color: @nord8;
+  border-top: 2px solid @nord8;
 }
 
 #mode {
-    background: @nord10;
-    border-bottom: 3px solid @nord11;
+  background: @nord10;
+  border-bottom: 3px solid @nord11;
 }
 
-#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode {
-    padding: 4px 6px;
-    margin: 0 2px;
+#clock,
+#battery,
+#cpu,
+#memory,
+#network,
+#pulseaudio,
+#custom-spotify,
+#tray,
+#mode {
+  padding: 4px 6px;
+  margin: 0 2px;
 }
 
 #clock {
@@ -53,14 +61,14 @@ window#waybar {
 }
 
 #battery icon {
-    color: @nord11;
+  color: @nord11;
 }
 
 #battery.charging {
 }
 
 #battery.warning:not(.charging) {
-    color: @nord6;
+  color: @nord6;
 }
 
 #cpu {
@@ -73,7 +81,7 @@ window#waybar {
 }
 
 #network.disconnected {
-    background: @nord9;
+  background: @nord9;
 }
 
 #pulseaudio {
