--- a/dotfiles/dot_config/flameshot/flameshot.ini.tmpl
+++ b/dotfiles/dot_config/flameshot/flameshot.ini.tmpl
@@ -1,12 +1,11 @@
 [General]
-buttons=@Variant(\0\0\0\x7f\0\0\0\vQList<int>\0\0\0\0\x15\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\x12\0\0\0\xf\0\0\0\x16\0\0\0\x13\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\x10\0\0\0\n\0\0\0\v\0\0\0\x17\0\0\0\xe\0\0\0\f\0\0\0\x11)
+buttons=@Variant(\0\0\0\x7f\0\0\0\x19QList<CaptureTool::Type>\0)
 checkForUpdates=false
 contrastOpacity=188
-copyAndCloseAfterUpload=true
 disabledTrayIcon=true
 drawColor=#a3be8c
 saveAsFileExtension=png
-savePath={{ .chezmoi.homeDir }}/Bilder/screenshots
+savePath={{ .chezmoi.homeDir }}/Bilder/Bildschirmfotos
 savePathFixed=true
 showDesktopNotification=true
 uiColor=#88c0d0
