--- a/ansible/roles/systemd-boot/templates/arch.conf.j2
+++ b/ansible/roles/systemd-boot/templates/arch.conf.j2
@@ -1,5 +1,7 @@
 title          Arch Linux
 linux          /vmlinuz-linux
+{% if has_intel_cpu %}
 initrd         /intel-ucode.img
+{% endif %}
 initrd         /initramfs-linux.img
 options        rd.luks.name={{ luks_device_uuid }}=archroot root=/dev/mapper/archroot rootflags=subvol=@ rw rootfstype=btrfs ibt=off
