--- a/ansible/roles/systemd-boot/templates/arch.conf.j2
+++ b/ansible/roles/systemd-boot/templates/arch.conf.j2
@@ -4,4 +4,4 @@ linux          /vmlinuz-linux
 initrd         /intel-ucode.img
 {% endif %}
 initrd         /initramfs-linux.img
-options        rd.luks.name={{ luks_device_uuid }}=archroot root=/dev/mapper/archroot rootflags=subvol=@ rw rootfstype=btrfs ibt=off
+options        rd.luks.name={{ luks_device_uuid }}=archroot root=/dev/mapper/archroot rootflags=subvol=@ rw rootfstype=btrfs {% if has_intel_cpu and intel_cpu_gen | int >= 11 -%}ibt=off{%- endif %}
