--- a/ansible/roles/systemd-boot/templates/arch-fallback.conf.j2
+++ b/ansible/roles/systemd-boot/templates/arch-fallback.conf.j2
@@ -4,4 +4,4 @@ linux          /vmlinuz-linux
 initrd         /intel-ucode.img
 {% endif %}
 initrd         /initramfs-linux-fallback.img
-options        rd.luks.name={{ luks_device_uuid }}=archroot root=/dev/mapper/archroot rootflags=subvol=@ rw rootfstype=btrfs ibt=off
+options        rd.luks.name={{ luks_device_uuid }}=archroot root=/dev/mapper/archroot rootflags=subvol=@ rw rootfstype=btrfs {% if disable_ibt %}ibt=off{% endif %}
