--- a/ansible/roles/kernel/templates/mkinitcpio.conf.j2
+++ b/ansible/roles/kernel/templates/mkinitcpio.conf.j2
@@ -1,4 +1,4 @@
 MODULES="btrfs"
 BINARIES="/usr/bin/btrfs"
 FILES=""
-HOOKS="base systemd autodetect keyboard sd-vconsole modconf block sd-encrypt filesystems {% if has_resume_hook %}resume {% endif %}fsck"
+HOOKS="base systemd keyboard autodetect sd-vconsole modconf block sd-encrypt filesystems {% if has_resume_hook %}resume {% endif %}fsck"
