use relative path to global gitignore

--- a/dotfiles/dot_config/git/config.tmpl
+++ b/dotfiles/dot_config/git/config.tmpl
@@ -11,6 +11,6 @@
     gpgsign = false
 [core]
     autocrlf = input
-    excludesfile = /home/macgyves/.config/git/ignore
+    excludesfile = ~/.config/git/ignore
 [push]
     default = current
