Add moin alias on wcar hosts

--- a/dotfiles/dot_config/zsh/aliases.zsh.tmpl
+++ b/dotfiles/dot_config/zsh/aliases.zsh.tmpl
@@ -67,3 +67,7 @@ alias -g sctl="systemctl"
 # taskmanager
 alias ta="task add"
 alias t="task"
+
+{{- if eq (substr 0 5 .chezmoi.hostname) "WCAR-" }}
+alias moin="we auth && aws sso login"
+{{- end }}
