choose host-specific git defaultbranch in aliases

--- a/dotfiles/dot_config/zsh/aliases.zsh.tmpl
+++ b/dotfiles/dot_config/zsh/aliases.zsh.tmpl
@@ -13,7 +13,7 @@ alias gb="git branch"
 alias gbd="git branch -d"
 alias gbD="git branch -D"
 alias gco="git checkout"
-alias gcom="git checkout main"
+alias gcom="git checkout {{ .git.defaultbranch }}"
 alias gcam="git commit --all -m"
 alias gd="git diff"
 alias gf="git fetch"
