add(gitignore): iml

--- a/dotfiles/dot_config/git/ignore.tmpl
+++ b/dotfiles/dot_config/git/ignore.tmpl
@@ -3,11 +3,10 @@ target/
  
 ### IntelliJ ###
 .idea/
+*.iml
  
 ### VSCode ###
 .vscode/
-
-{{- if eq (substr 0 5 .chezmoi.hostname) "WCAR-" }}
 ### asdf-vm
 .tool-versions
-{{- end }}
+
